# biolympics-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  biolympics_dev.db  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 56eda77ed310_initial_schema.py
app/: __init__.py  cli.py  main.py
app/api/: deps.py
app/api/v1/: router.py  ws.py
app/api/v1/endpoints/: admin.py  auth.py  public.py  push.py
app/core/: config.py  logging.py  middleware.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  auth.py  content.py  core.py  enums.py  fixtures.py  notifications.py  standings.py
app/schemas/: admin.py  auth.py  common.py  public.py  push.py
app/seeds/: data.py  seed.py
app/services/: audit.py  events.py  lifecycle.py  medal_table.py  notifications.py  recompute.py  repo.py  scoring.py  serializers.py  standings.py
app/websocket/: manager.py
app/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_auth.py  test_lifecycle.py  test_public_api.py  test_push.py  test_scoring.py  test_seed.py  test_standings.py
